added eslint and prettify
